feat(api): add importer's requests and limits for virtualization config (#266)
